/*
 * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

/*
 * Protos for serializing Tribuo multi-label classification SGD classes.
 */
package tribuo.multilabel.sgd;

option java_multiple_files = true;
option java_package = "org.tribuo.multilabel.sgd.protos";

// Import Tribuo's core protos
import "tribuo-core.proto";

// Import Tribuo's math interface protos
import "tribuo-math.proto";

/*
FMMultiLabelModel proto
 */
message FMMultiLabelModelProto {
  tribuo.core.ModelDataProto metadata = 1;
  tribuo.math.ParametersProto params = 2;
  tribuo.math.NormalizerProto normalizer = 3;
  double threshold = 4;
}

/*
LinearSGDModel proto
 */
message MultiLabelLinearSGDProto {
  tribuo.core.ModelDataProto metadata = 1;
  tribuo.math.ParametersProto params = 2;
  tribuo.math.NormalizerProto normalizer = 3;
  double threshold = 4;
}
